Fix issue testimonial imgs overlapping navbar #37

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -78,6 +78,7 @@ nav {
   width:100%;
   height: 57px;
   background-color: white;
+  z-index: 3;
 }
 
 .navbar {
@@ -635,8 +636,7 @@ margin-right: 10%;}
 /* in desktop view, present testimonials as floating ticker row */
 
 @media (min-width: 1208px) {
-  .slideshow-container {
- }
+
   .carouselDot {
       display: none;
  }
@@ -658,12 +658,6 @@ margin-right: 10%;}
  }
 
 
-
-@media (min-width: 1768px) {
-  .slideshow-container {
-    
-  }
-}
 
 
 
@@ -994,5 +988,6 @@ form input {
 
   button[type="submit"] {
     grid-column-start: 1;
+}
 }
 }
